--- a/configs/files/conf/resolv.conf
+++ b/configs/files/conf/resolv.conf
@@ -1,8 +1,6 @@
-# Configuration /etc/resolv.conf using the DNS servers of Quad9.
+# Add /etc/resolv.conf to resolve to localhost to use dnsmasq as local DNS.
 
-nameserver 2620:fe::11
-nameserver 9.9.9.11
-nameserver 2620:fe::fe:11
-nameserver 149.112.112.11
+nameserver 127.0.0.1
+nameserver ::1
 
 options trust-ad
