add hook for intramfs-tools to remove large files

--- a/configs/files/initramfs-tools/conf.d/zstd-compression.conf
+++ b/configs/files/initramfs-tools/conf.d/zstd-compression.conf
@@ -4,8 +4,7 @@
 # Nitux Latinoamericana S.C. (2024).
 
 #
-# MODULES: [ most | netboot | dep | list ]
-#
+# MODULES: [ most | 
 # most - Add most filesystem and all harddrive drivers.
 #
 # dep - Try and guess which modules to load.
@@ -44,7 +43,7 @@ COMPRESS=zstd
 # 0 -  9 for  lz4|xz
 # 0 - 19 for zstd
 #
-COMPRESSLEVEL=19
+COMPRESSLEVEL=22
 
 #
 # DEVICE: ...
